syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//设备表
service Device {
  //设备表-注册设备
  rpc RegisterDevice(RegisterDeviceReq) returns (RegisterDeviceReply) {
    option (google.api.http) = {
      post: "/admin/v1/device/register"
      body: "*"
    };
  }
  //设备表-更新状态
  rpc UpdateDeviceStatus(UpdateDeviceStatusReq) returns (UpdateDeviceStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/device/update/status"
      body: "*"
    };
  }
  //设备表-删除一条数据
  rpc DeleteDevice(DeleteDeviceReq) returns (DeleteDeviceReply) {
    option (google.api.http) = {
      post: "/admin/v1/device/delete"
      body: "*"
    };
  }
  //设备表-单条数据查询
  rpc GetDeviceInfo(GetDeviceInfoReq) returns (GetDeviceInfoReply) {
    option (google.api.http) = {get: "/admin/v1/device/info"};
  }
  //设备表-列表数据查询
  rpc GetDeviceList(GetDeviceListReq) returns (GetDeviceListReply) {
    option (google.api.http) = {
      post: "/admin/v1/device/list"
      body: "*"
    };
  }
  //设备表-在线设备数量统计
  rpc GetOnlineDeviceCount(GetOnlineDeviceCountReq) returns (GetOnlineDeviceCountReply) {
    option (google.api.http) = {get: "/admin/v1/device/online/count"};
  }
}

//设备表信息
message DeviceInfo {
  string id = 1; // ID
  string sn = 2; // 设备ID
  string name = 3; // 设备名称
  string desc = 4; // 描述
  string brand = 5; // 设备品牌
  string model = 6; // 设备型号
  string network = 7; // 入网型号
  string imei = 8; // IMEI
  string CPU = 9; // cpu型号
  string mac = 10; // mac地址
  string appVersion = 11; // app版本
  string androidVersion = 12; // 安卓版本
  double RAMSize = 13; // RAM大小
  double ddrSize = 14; // DDR大小
  string certificate = 15; // 设备证书
  string secureKey = 16; // 设备密钥
  string registryTime = 17; // 激活时间
  DevicePush push = 18; // 推送
  int32 status = 19; // 状态
  string createdAt = 20; // 创建时间
  string updatedAt = 21; // 更新时间
  bool online = 22; // 在线状态
}

//设备推送
message DevicePush {
  string channelID = 1; // 推送通道ID
}

//请求-设备表-创建一条数据
message RegisterDeviceReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["sn"]
    }
  };

  string sn = 1 [(buf.validate.field).string = {min_len: 1}]; // 设备的唯一标识序列号
}

//响应-设备表-创建一条数据
message RegisterDeviceReply {}

//请求-设备表-更新状态
message UpdateDeviceStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["sn"]
    }
  };

  string sn = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 设备SN
  int32 status = 2 [(buf.validate.field).int32 = {
    in: [
      -1,
      1
    ]
  }]; // 状态
}

//响应-设备表-更新状态
message UpdateDeviceStatusReply {}

//请求-设备表-删除一条数据
message DeleteDeviceReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["sn"]
    }
  };

  string sn = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // ID
}

//响应-设备表-删除一条数据
message DeleteDeviceReply {}

//请求-设备表-单条数据查询
message GetDeviceInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["sn"]
    }
  };

  string sn = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 设备SN
}

//响应-设备表-单条数据查询
message GetDeviceInfoReply {
  DeviceInfo info = 1;
}

//请求-设备表-列表数据查询
message GetDeviceListReq {
  int32 page = 1; //页码
  int32 pageSize = 2; //页数
  string sn = 3; // 设备SN
  int32 status = 4; // 状态
  repeated string registryTime = 5; // 注册时间
  string onlineSearch = 6; // 在线状态 online:在线 offline:离线 all:全部
}

//响应-设备表-列表数据查询
message GetDeviceListReply {
  int32 total = 1; //总数
  repeated DeviceInfo list = 2; // 列表数据
}

//请求-设备表-在线设备数量统计
message GetOnlineDeviceCountReq {}

//响应-设备表-在线设备数量统计
message GetOnlineDeviceCountReply {
  int64 count = 1; // 在线设备数量
}
